<resources>
	<string name="app_name">RealmTest</string>

	<string name="thread_one_title">Thread 1 Iteration Count:</string>
	<string name="thread_two_title">Thread 2 Iteration Count:</string>
	<string name="thread_three_title">Thread 3 Iteration Count:</string>
	<string name="thread_four_title">Thread 4 Iteration Count:</string>
	<string name="thread_five_title">Thread 5 Iteration Count:</string>
	<string name="thread_six_title">Thread 6 Iteration Count:</string>

	<string name="start_test_title">Start Test</string>
	<string name="building_title">Building Database...</string>
	<string name="test_running">Memory Test is Running</string>

	<string name="start_time_title">Time Started:</string>
	<string name="duration_title">Duration:</string>

</resources>
