<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		tools:context="io.binarysolutions.realmtest.MainActivity">

	<data>
		<variable name="threadOneCount" type="java.lang.String" />
		<variable name="threadTwoCount" type="java.lang.String" />
		<variable name="errorMessages" type="java.lang.String" />
		<variable name="startTime" type="java.lang.String" />
		<variable name="duration" type="java.lang.String" />
	</data>


	<RelativeLayout android:id="@+id/activity_main"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:paddingBottom="@dimen/activity_vertical_margin"
					android:paddingLeft="@dimen/activity_horizontal_margin"
					android:paddingRight="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:background="@color/colorBackground">


		<TextView android:id="@+id/thread_one_title_text"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:text="@string/thread_one_title"
				  android:textColor="@color/textColour"/>

		<TextView android:id="@+id/thread_one_iteration_text"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_toEndOf="@id/thread_one_title_text"
				  android:layout_marginStart="6dp"
				  android:text="@{threadOneCount}"
				  android:textColor="@color/textColour"/>

		<TextView android:id="@+id/thread_two_title_text"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="6dp"
				  android:layout_below="@id/thread_one_title_text"
				  android:text="@string/thread_two_title"
				  android:textColor="@color/textColour"/>

		<TextView android:id="@+id/thread_two_iteration_text"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_alignBaseline="@id/thread_two_title_text"
				  android:layout_toEndOf="@id/thread_two_title_text"
				  android:layout_marginStart="6dp"
				  android:text="@{threadTwoCount}"
				  android:textColor="@color/textColour"/>

		<TextView android:id="@+id/error_message_text"
				  android:layout_width="match_parent"
				  android:layout_height="364dp"
				  android:layout_below="@id/thread_two_title_text"
				  android:layout_marginTop="12dp"
				  android:text="@{errorMessages}"
				  android:textColor="@color/errorRed"
				  android:background="@color/errorBackground"
				  android:isScrollContainer="true" />

		<Button android:id="@+id/start_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:text="@string/building_title"
				android:textColor="@color/textColour"
				android:enabled="false"
				android:background="@color/errorBackground"/>

		<TextView android:id="@+id/start_title"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginBottom="6dp"
				  android:layout_above="@id/start_button"
				  android:text="@string/start_time_title"
				  android:textColor="@color/textColour"/>

		<TextView android:id="@+id/start_time"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_alignBaseline="@id/start_title"
				  android:layout_toEndOf="@id/start_title"
				  android:layout_marginStart="6dp"
				  android:text="@{startTime}"
				  android:textColor="@color/textColour"/>

		<TextView android:id="@+id/duration_title"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginBottom="6dp"
				  android:layout_above="@id/start_title"
				  android:text="@string/duration_title"
				  android:textColor="@color/textColour"/>

		<TextView android:id="@+id/duration_time"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_alignBaseline="@id/duration_title"
				  android:layout_toEndOf="@id/start_title"
				  android:layout_marginStart="6dp"
				  android:text="@{duration}"
				  android:textColor="@color/textColour"/>

	</RelativeLayout>

</layout>